--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ loguru>=0.7.0
 
 # AI Integration
 google-generativeai>=0.3.0
+pydantic>=2.0.0
+underthesea>=1.3.0  # Vietnamese tokenization (optional)
 
 # Development Tools
 pytest>=7.0.0
