--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,15 @@ google-generativeai>=0.3.0
 pydantic>=2.0.0
 underthesea>=1.3.0  # Vietnamese tokenization (optional)
 
+# Redis for session state (optional but recommended for multi-worker)
+redis>=4.6.0
+
+# Rate limiting
+slowapi>=0.1.9
+
+# Security
+cryptography>=41.0.0  # For API key management
+
 # Development Tools
 pytest>=7.0.0
 
