--- a/cultivation-sim/requirements.txt
+++ b/cultivation-sim/requirements.txt
@@ -9,8 +9,8 @@ python-dotenv>=1.0.0
 google-generativeai>=0.3.0
 pydantic>=2.0.0
 
-# Optional: Vietnamese tokenization
-underthesea>=1.3.0
+# Optional: Vietnamese tokenization (commented out - takes too long to install)
+# underthesea>=1.3.0
 
 # Optional: Redis (for multi-worker)
 redis>=4.6.0
