--- a/cultivation-sim/requirements.txt
+++ b/cultivation-sim/requirements.txt
@@ -7,7 +7,8 @@ python-dotenv>=1.0.0
 
 # AI
 google-generativeai>=0.3.0
-pydantic>=2.0.0
+pydantic>=2.0
+noise>=1.2.2.0
 
 # Optional: Vietnamese tokenization (commented out - takes too long to install)
 # underthesea>=1.3.0
