--- a/cultivation-sim/cultivation-ui/package.json
+++ b/cultivation-sim/cultivation-ui/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "axios": "^1.7.0"
+    "axios": "^1.7.0",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
