Clean up: Move unused/temp files to linhtinh folder and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,10 @@ benchmarks/results/
 # Old/unused folders
 gamecuatoi/*.json
 benchmarks/results/*.md
+
+# Temporary/unused files
+linhtinh/
+temp/
+unused/
+*.bak
+*.backup
